shop editor initial

--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -129,36 +129,14 @@
   "commands.fpsm.shop.modify.failed.noSupport": "map not support shop.",
   "commands.fpsm.shop.modify.item.success": "Successfully modified item in %1$s shop slot %2$s to %3$s",
   "gui.fpsm.shop_editor.title": "Shop Editor",
-  "gui.fpsm.edit_shop_slot.title": "Edit Current Slot",
   "gui.fpsm.shop_editor.save_button": "Confirm and save",
   "item.fpsmatch.shop_edit_tool": "shop edit tool",
   "tooltip.fpsm.shop_edit_tool.map_selected": "Current Selected Map :",
   "tooltip.fpsm.shop_edit_tool.team_selected": "Current Selected Team :",
   "message.fpsm.shop_edit_tool.all_maps": "All Available Maps :",
   "message.fpsm.shop_edit_tool.all_shops": "All Available Shops :",
-  "message.fpsm.shop_edit_tool.select_map": "You choose Map :",
-  "message.fpsm.shop_edit_tool.select_and_join_shop": "You choose Shop and join Team :",
+  "message.fpsm.shop_edit_tool.select_map": "You Choose Map :",
+  "message.fpsm.shop_edit_tool.select_shop": "You Choose Shop :",
   "message.fpsm.shop_edit_tool.missing_map": "No Map is available!",
-  "message.fpsm.shop_edit_tool.missing_shop": "No Shop is available!",
-  "itemGroup.tab.fpsm": "FPSMatch",
-  "gui.fpsm.dummy_ammo": "Dummy Ammo",
-  "gui.fpsm.name": "Name",
-  "gui.fpsm.price": "Price",
-  "gui.fpsm.group": "GroupID",
-  "gui.fpsm.listener": "Listening Module",
-  "tooltip.fpsm.separator": "======================",
-  "tooltip.fpsm.selected_map": "Current Selected Map",
-  "tooltip.fpsm.selected_shop": "Current Selected Shop",
-  "tooltip.fpsm.none": "N/A",
-  "tooltip.fpsm.usage_info": "Usage:",
-  "tooltip.fpsm.switch_shop": "[SHIFT + Right Click] Switch Shop",
-  "tooltip.fpsm.switch_map": "[SHIFT + Left Click] Switch Map",
-  "tooltip.fpsm.open_editor": "[Right Click] Open Shop Editor",
-  "message.fpsmatch.error.no_spawn_points": "No spawn points available.",
-  "message.fpsmatch.error.not_enough_spawn_points": "Not enough spawn points for all players.",
-  "fpsm.map.cs.spawn.error": "ERROR : Game start fail -> spawnpoint check failed",
-  "key.fpsm.switch_previous_item.desc": "Switch Previous Item",
-  "commands.fpsm.modify.spawn.set.success": "%1$d spawn points are added for team %2$s.",
-  "commands.fpsm.modify.spawn.set.missing_args": "Missing pos args",
-  "commands.fpsm.modify.spawn.set.over_flow": "Error: The area exceeds the maximum allowed size"
+  "message.fpsm.shop_edit_tool.missing_shop": "No Shop is available!"
 }
