--- a/src/main/resources/assets/fpsmatch/lang/zh_cn.json
+++ b/src/main/resources/assets/fpsmatch/lang/zh_cn.json
@@ -120,16 +120,15 @@
   "fpsmatch.tab.header.damage": "伤害",
   "fpsmatch.tab.header.money": "金钱",
   "fpsmatch.tab.header.headshot": "爆头率",
-  "key.fpsm.hud.custom.desc": "自定义游戏UI",
-  "key.fpsm.hud.custom.on": "自定义游戏UI 开启",
-  "key.fpsm.hud.custom.off": "自定义游戏UI 关闭",
   "commands.fpsm.mvp.success": "成功添加 %2$s Mvp 音乐给 %1$s 位玩家",
   "cs.game.winner.mvpNameSub": "取得回合胜利",
   "commands.fpsm.shop.modify.cost.success": "成功将%1$s商店槽位%2$s的价格修改为%3$s",
-  "commands.fpsm.shop.modify.failed.noSupport": "地图不支持商店",
+  "commands.fpsm.shop.modify.failed.noSupport" : "地图不支持商店",
   "commands.fpsm.shop.modify.item.success": "成功将%1$s商店槽位%2$s的物品修改为%3$s",
+  "key.fpsm.hud.custom.desc": "自定义游戏UI",
+  "key.fpsm.hud.custom.on": "自定义游戏UI 开启",
+  "key.fpsm.hud.custom.off": "自定义游戏UI 关闭",
   "gui.fpsm.shop_editor.title": "商店内容编辑器",
-  "gui.fpsm.edit_shop_slot.title": "编辑当前槽位",
   "gui.fpsm.shop_editor.save_button": "确认并保存",
   "item.fpsmatch.shop_edit_tool": "商店内容编辑工具",
   "tooltip.fpsm.shop_edit_tool.map_selected": "当前选中地图 :",
@@ -137,28 +136,7 @@
   "message.fpsm.shop_edit_tool.all_maps": "所有可用地图 : ",
   "message.fpsm.shop_edit_tool.all_shops": "所有可用商店 : ",
   "message.fpsm.shop_edit_tool.select_map": "你选择了 地图 : ",
-  "message.fpsm.shop_edit_tool.select_and_join_shop": "你选择了商店并加入了队伍 :",
+  "message.fpsm.shop_edit_tool.select_shop": "你选择了 商店 : ",
   "message.fpsm.shop_edit_tool.missing_map": "没有可用地图！",
-  "message.fpsm.shop_edit_tool.missing_shop": "没有可用商店!",
-  "itemGroup.tab.fpsm": "FPSMatch",
-  "gui.fpsm.dummy_ammo": "虚拟弹药",
-  "gui.fpsm.name": "名称",
-  "gui.fpsm.price": "价格",
-  "gui.fpsm.group": "组ID",
-  "gui.fpsm.listener": "监听模块",
-  "tooltip.fpsm.separator": "======================",
-  "tooltip.fpsm.selected_map": "当前选择地图",
-  "tooltip.fpsm.selected_shop": "当前选择商店",
-  "tooltip.fpsm.none": "无",
-  "tooltip.fpsm.usage_info": "使用方法：",
-  "tooltip.fpsm.switch_shop": "[SHIFT + 右键] 切换商店",
-  "tooltip.fpsm.switch_map": "[SHIFT + 左键] 切换地图",
-  "tooltip.fpsm.open_editor": "[右键] 打开商店编辑器",
-  "message.fpsmatch.error.no_spawn_points": "没有出生点来开始游戏.",
-  "message.fpsmatch.error.not_enough_spawn_points": "没有足够的出生点来分配给玩家.",
-  "fpsm.map.cs.spawn.error": "错误 : 游戏开始失败 -> 出生点检查失败.",
-  "key.fpsm.switch_previous_item.desc": "切换到上一次物品",
-  "commands.fpsm.modify.spawn.set.success": "为团队 %2$s 添加了 %1$d 个出生点.",
-  "commands.fpsm.modify.spawn.set.missing_args": "缺少位置参数",
-  "commands.fpsm.modify.spawn.set.over_flow": "错误：区域超出允许的最大大小"
+  "message.fpsm.shop_edit_tool.missing_shop": "没有可用商店!"
 }
