add editor capability

--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -129,15 +129,21 @@
   "commands.fpsm.shop.modify.failed.noSupport": "map not support shop.",
   "commands.fpsm.shop.modify.item.success": "Successfully modified item in %1$s shop slot %2$s to %3$s",
   "gui.fpsm.shop_editor.title": "Shop Editor",
+  "gui.fpsm.edit_shop_slot.title": "Edit Current Slot",
   "gui.fpsm.shop_editor.save_button": "Confirm and save",
   "item.fpsmatch.shop_edit_tool": "shop edit tool",
   "tooltip.fpsm.shop_edit_tool.map_selected": "Current Selected Map :",
   "tooltip.fpsm.shop_edit_tool.team_selected": "Current Selected Team :",
   "message.fpsm.shop_edit_tool.all_maps": "All Available Maps :",
   "message.fpsm.shop_edit_tool.all_shops": "All Available Shops :",
-  "message.fpsm.shop_edit_tool.select_map": "You Choose Map :",
-  "message.fpsm.shop_edit_tool.select_shop": "You Choose Shop :",
+  "message.fpsm.shop_edit_tool.select_map": "You choose Map :",
+  "message.fpsm.shop_edit_tool.select_and_join_shop": "You choose Shop and join Team :",
   "message.fpsm.shop_edit_tool.missing_map": "No Map is available!",
   "message.fpsm.shop_edit_tool.missing_shop": "No Shop is available!",
-  "itemGroup.tab.fpsm": "FPSMatch"
+  "itemGroup.tab.fpsm": "FPSMatch",
+  "gui.fpsm.dummyAmmo": "Dummy Ammo",
+  "gui.fpsm.name": "Name",
+  "gui.fpsm.price": "Price",
+  "gui.fpsm.group": "GroupID",
+  "gui.fpsm.listener": "Listening Module"
 }
