--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -156,5 +156,6 @@
   "tooltip.fpsm.open_editor": "[Right Click] Open Shop Editor",
   "message.fpsmatch.error.no_spawn_points": "No spawn points available.",
   "message.fpsmatch.error.not_enough_spawn_points": "Not enough spawn points for all players.",
-  "fpsm.map.cs.spawn.error": "ERROR : Game start fail -> spawnpoint check failed"
+  "fpsm.map.cs.spawn.error": "ERROR : Game start fail -> spawnpoint check failed",
+  "key.fpsm.switch_previous_item.desc": "Switch Previous Item"
 }
