v 1.2.3.8 FIX - 修复了部分指令执行后反馈不清晰的问题 FIX - 修复了商店编辑界面中的二级界面的虚拟弹药没有正确显示翻译文本的问题。 CHANGE - 现在游戏HUD能够定义是否让旁观者队伍是否渲染了。

--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "commands.fpsm.only.player": "Only player can execute this command.",
   "commands.fpsm.debug.start.success": "The game on map '%1$s' has started.",
   "commands.fpsm.debug.reset.success": "The game on map '%1$s' has been reset.",
   "commands.fpsm.debug.newround.success": "A new round has started on map '%1$s'.",
@@ -16,11 +17,14 @@
   "commands.fpsm.modify.spawn.clear.success": "Spawn points cleared for team %1$s.",
   "commands.fpsm.modify.spawn.clearall.success": "All spawn points cleared.",
   "commands.fpsm.modify.spawn.invalidAction": "Specified an invalid spawn point action.",
+  "commands.fpsm.modify.spawn.set.missing_args": "Missing arguments. Please specify both 'from' and 'to' positions.",
+  "commands.fpsm.modify.spawn.set.over_flow": "The area is too large! Maximum allowed distance between points is 11 blocks.",
+  "commands.fpsm.modify.spawn.set.success" : "Successfully set %1$s spawn points for team %2$s in the specified area.",
   "fpsm.shop.title.cooldown": "Remaining purchase time %1$s",
   "fpsm.shop.title.min.money": "Minimum amount for next round %1$s",
   "fpsm.shop.slot.empty" : "none",
   "key.fpsm.open.shop.desc": "Open gun shop",
-  "key.category.fpsm": "FPS Match",
+  "key.category.fpsm": "FPSMatch",
   "key.fpsm.open.shop.failed.no_map": "Cannot open the store because you have not joined any maps",
   "key.fpsm.open.shop.failed.game.not_started": "Cannot open the store because game not started",
   "key.fpsm.open.shop.failed.purchase_time.expired": "Cannot open the store because purchase time expired",
@@ -35,26 +39,20 @@
   "commands.fpsm.modify.kits.clear.failed": "Failed to clear start kits for team '%1$s'.",
   "commands.fpsm.modify.kits.invalidAction": "Invalid action.",
   "commands.fpsm.modify.kits.list.success": "Start kits list for team '%1$s': %2$d items.",
-  "commands.fpsm.modify.matchEndTeleportPoint.success" : "Successfully set the end of the game teleport point '%1$s'",
-  "commands.fpsm.modify.matchEndTeleportPoint.failed" : "Failed to set the end of the game teleport point",
+  "commands.fpsm.modify.match_end_teleport_point.success" : "[FPSMatch] Successfully set the end of the game teleport point '%1$s'",
+  "commands.fpsm.match_end_teleport_point.not_available" : "[FPSMatch] Map %1$s is not an available match end teleport to point map.",
   "key.fpsm.custom.tab.on": "Custom Tab On",
   "key.fpsm.custom.tab.off": "Custom Tab Off",
   "key.fpsm.custom.tab.desc": "Switch Custom Tab",
-  "commands.fpsm.save.success": "Saved successfully.",
-  "fpsm.death.message": "%1$s killed %2$s with %3$s",
-  "fpsm.death.message.headshot": "%1$s headshot %2$s with %3$s",
-  "fpsm.kill.message.teammate" : "kill teammate reduce %1$s money",
-  "fpsm.kill.message.enemy" : "kill enemy add %1$s money",
-  "commands.fpsm.sync.success": "Sync operation completed successfully.",
-  "commands.fpsm.shop.slot.modify.group.success": "Successfully modified group ID for shop type %1$s, slot %2$d to %3$d.",
-  "commands.fpsm.shop.slot.modify.group.fail": "Failed to modify group ID for map %1$s.",
-  "commands.fpsm.shop.slot.listener.remove.success": "Successfully removed listener module %1$s.",
-  "commands.fpsm.shop.slot.listener.remove.fail": "Failed to remove listener module %1$s.",
-  "commands.fpsm.listener.add.success": "Successfully added listener module %1$s.",
-  "commands.fpsm.listener.add.fail": "Failed to add listener module %1$s.",
-  "commands.fpsm.reload.success": "Reload operation completed successfully.",
-  "commands.fpsm.shop.modify.gun.success": "Successfully modified the %1$s shop slot %2$d to include '%3$s' with %4$d dummy ammo.",
-  "commands.fpsm.shop.modify.gun.failed": "Failed to modify the gun in the shop. Please check the shop data",
+  "commands.fpsm.save.success": "[FPSMatch] Saved successfully.",
+  "commands.fpsm.sync.success": "[FPSMatch] Sync operation completed successfully.",
+  "commands.fpsm.shop.slot.modify.group.success": "[FPSMatch] Successfully modified group ID for shop type %1$s, slot C to %3$d.",
+  "commands.fpsm.shop.slot.modify.fail": "[FPSMatch] Unable to find %1$s shop from map %2$s.",
+  "commands.fpsm.shop.not_available": "[FPSMatch] Map %1$s is not an available shop map.",
+  "commands.fpsm.shop.slot.listener.remove.success": "[FPSMatch] Successfully removed listener module %1$s.",
+  "commands.fpsm.listener.add.success": "[FPSMatch] Successfully added listener module %1$s.",
+  "commands.fpsm.reload.success": "[FPSMatch] Reload operation completed successfully.",
+  "commands.fpsm.shop.modify.gun.success": "[FPSMatch] Successfully modified the %1$s shop slot %2$d to include '%3$s' with %4$d dummy ammo.",
   "item.fpsmatch.smoke_shell" : "Smoke Shell",
   "fpsm.shop.title.equipment" : "Equipment",
   "fpsm.shop.title.pistol" : "Pistol",
@@ -79,7 +77,6 @@
   "key.fpsm.hud.custom.off": "Custom Game Hud Off",
   "commands.fpsm.mvp.success": "success add %2$s mvp music to %1$s players",
   "commands.fpsm.shop.modify.cost.success": "The price for slot %2$s of %1$s in the store has been changed to %3$s",
-  "commands.fpsm.shop.modify.failed.noSupport": "map not support shop.",
   "commands.fpsm.shop.modify.item.success": "Successfully modified item in %1$s shop slot %2$s to %3$s",
   "gui.fpsm.shop_editor.title": "Shop Editor",
   "gui.fpsm.edit_shop_slot.title": "Edit Current Slot",
