--- a/src/main/resources/assets/fpsmatch/lang/zh_cn.json
+++ b/src/main/resources/assets/fpsmatch/lang/zh_cn.json
@@ -1,21 +1,25 @@
 {
-  "commands.fpsm.debug.start.success": "地图“%1$s”的游戏已开始",
-  "commands.fpsm.debug.reset.success": "地图“%1$s”的游戏已重置",
-  "commands.fpsm.debug.newround.success": "地图“%1$s”开始了新的一轮",
-  "commands.fpsm.debug.cleanup.success": "地图“%1$s”已被清理",
-  "commands.fpsm.create.success": "地图“%1$s”创建成功",
-  "commands.fpsm.team.join.success": "%1$s 加入了 %2$s 队伍",
-  "commands.fpsm.team.join.failure": "%1$s 队伍已满",
-  "commands.fpsm.team.leave.success": "%1$s 离开了队伍",
-  "commands.fpsm.team.invalidAction": "指定了无效的队伍操作",
-  "commands.fpsm.team.notFound": "队伍未找到",
-  "commands.fpsm.map.notFound": "地图未找到",
-  "commands.fpsm.modify.bombarea.success": "添加爆破区域成功",
-  "commands.fpsm.modify.bombarea.failed": "添加爆破区域失败",
-  "commands.fpsm.modify.spawn.add.success": "为 %1$s 队伍添加了出生点",
-  "commands.fpsm.modify.spawn.clear.success": "清除了 %1$s 队伍的所有出生点",
-  "commands.fpsm.modify.spawn.clearall.success": "清除了所有出生点",
-  "commands.fpsm.modify.spawn.invalidAction": "指定了无效的出生点操作",
+  "commands.fpsm.only.player": "[FPSMatch] 只有玩家才能执行这个指令！",
+  "commands.fpsm.debug.start.success": "[FPSMatch] 地图“%1$s”的游戏已开始",
+  "commands.fpsm.debug.reset.success": "[FPSMatch] 地图“%1$s”的游戏已重置",
+  "commands.fpsm.debug.newround.success": "[FPSMatch] 地图“%1$s”开始了新的一轮",
+  "commands.fpsm.debug.cleanup.success": "[FPSMatch] 地图“%1$s”已被清理",
+  "commands.fpsm.create.success": "[FPSMatch] 地图“%1$s”创建成功",
+  "commands.fpsm.team.join.success": "[FPSMatch] %1$s 加入了 %2$s 队伍",
+  "commands.fpsm.team.join.failure": "[FPSMatch] %1$s 队伍已满",
+  "commands.fpsm.team.leave.success": "[FPSMatch] %1$s 离开了队伍",
+  "commands.fpsm.team.invalidAction": "[FPSMatch] 指定了无效的队伍操作",
+  "commands.fpsm.team.notFound": "[FPSMatch] 队伍未找到",
+  "commands.fpsm.map.notFound": "[FPSMatch] 地图未找到",
+  "commands.fpsm.modify.bombarea.success": "[FPSMatch] 添加爆破区域成功",
+  "commands.fpsm.modify.bombarea.failed": "[FPSMatch] 添加爆破区域失败",
+  "commands.fpsm.modify.spawn.add.success": "[FPSMatch] 为 %1$s 队伍添加了出生点",
+  "commands.fpsm.modify.spawn.clear.success": "[FPSMatch] 清除了 %1$s 队伍的所有出生点",
+  "commands.fpsm.modify.spawn.clearall.success": "[FPSMatch] 清除了所有出生点",
+  "commands.fpsm.modify.spawn.invalidAction": "[FPSMatch] 指定了无效的出生点操作",
+  "commands.fpsm.modify.spawn.set.missing_args": "[FPSMatch] 缺少参数。请指定from和to位置坐标。",
+  "commands.fpsm.modify.spawn.set.over_flow": "[FPSMatch] 区域过大！两点间最大允许距离为11格。",
+  "commands.fpsm.modify.spawn.set.success": "[FPSMatch] 成功为%2$s队伍在指定区域内设置了%1$s个出生点。",
   "fpsm.shop.title.cooldown": "剩余购买时间 %1$s",
   "fpsm.shop.title.min.money": "下一轮的最低金额 %1$s",
   "fpsm.shop.slot.empty": "空",
@@ -27,40 +31,35 @@
   "key.fpsm.open.shop.failed.left.purchase_area": "因为离开了购买区域，所以无法打开商店",
   "key.fpsm.open.shop.failed.game_type.no_shop": "因为加入的游戏不支持商店，所以无法打开商店",
   "key.fpsm.dismantle_bomb.desc": "拆除炸弹",
-  "commands.fpsm.team.leave.failure": "队伍未找到",
-  "commands.fpsm.shop.modify.success": "成功修改了“%1$s”商店的第%3$d个类型为%2$d的商品槽，商品为“%4$s”，价格为%5$d",
-  "commands.fpsm.shop.modify.failed": "修改商店失败请检查您的权限或商店是否存在",
-  "commands.fpsm.modify.kits.add.success": "成功为队伍 '%2$s' 添加了起始装备 '%1$s'",
-  "commands.fpsm.modify.kits.clear.success": "成功清除了队伍 '%1$s' 的起始装备",
-  "commands.fpsm.modify.kits.clear.failed": "清除队伍 '%1$s' 的起始装备失败",
-  "commands.fpsm.modify.kits.invalidAction": "无效的操作",
-  "commands.fpsm.modify.kits.list.success": "队伍 '%1$s' 的起始装备列表：%2$d 件",
-  "commands.fpsm.modify.matchEndTeleportPoint.success": "成功设置了游戏结束传送点 '%1$s'",
-  "commands.fpsm.modify.matchEndTeleportPoint.failed": "设置游戏结束传送点失败",
+  "commands.fpsm.team.leave.failure": "[FPSMatch] 队伍未找到",
+  "commands.fpsm.shop.modify.success": "[FPSMatch] 成功修改了“%1$s”商店的第%3$d个类型为%2$d的商品槽，商品为“%4$s”，价格为%5$d",
+  "commands.fpsm.shop.modify.failed": "[FPSMatch] 修改商店失败请检查您的权限或商店是否存在",
+  "commands.fpsm.modify.kits.add.success": "[FPSMatch] 成功为队伍 '%2$s' 添加了起始装备 '%1$s'",
+  "commands.fpsm.modify.kits.clear.success": "[FPSMatch] 成功清除了队伍 '%1$s' 的起始装备",
+  "commands.fpsm.modify.kits.clear.failed": "[FPSMatch] 清除队伍 '%1$s' 的起始装备失败",
+  "commands.fpsm.modify.kits.invalidAction": "[FPSMatch] 无效的操作",
+  "commands.fpsm.modify.kits.list.success": "[FPSMatch] 队伍 '%1$s' 的起始装备列表：%2$d 件",
+  "commands.fpsm.modify.match_end_teleport_point.success": "[FPSMatch] 成功设置了游戏结束传送点 '%1$s'",
+  "commands.fpsm.match_end_teleport_point.not_available": "[FPSMatch] 地图 %1$s 不支持设置游戏结束传送点。",
   "key.fpsm.custom.tab.on": "自定义Tab 开启",
   "key.fpsm.custom.tab.off": "自定义Tab 关闭",
   "key.fpsm.custom.tab.desc": "切换自定义Tab",
-  "commands.fpsm.save.success": "保存成功",
-  "fpsm.death.message": "%1$s 使用 %3$s 击杀 %2$s",
-  "fpsm.death.message.headshot": "%1$s 使用 %3$s 爆头击杀 %2$s",
-  "fpsm.kill.message.teammate": "击杀队友减少 %1$s 货币",
-  "fpsm.kill.message.enemy": "击杀敌人奖励 %1$s 货币",
-  "commands.fpsm.sync.success": "同步操作成功完成",
+  "commands.fpsm.save.success": "[FPSMatch] 保存成功",
+  "commands.fpsm.sync.success": "[FPSMatch] 同步操作成功完成",
   "commands.fpsm.shop.slot.modify.group.success": "成功修改了商店类型%1$s的第%2$d个插槽的组ID为%3$d",
-  "commands.fpsm.shop.slot.modify.group.fail": "修改地图%1$s的组ID失败",
-  "commands.fpsm.shop.slot.listener.remove.success": "成功移除了监听模块%1$s",
-  "commands.fpsm.shop.slot.listener.remove.fail": "移除监听模块%1$s失败",
-  "commands.fpsm.listener.add.success": "成功添加了监听模块%1$s",
-  "commands.fpsm.listener.add.fail": "添加监听模块%1$s失败",
-  "commands.fpsm.reload.success": "重载操作成功完成",
-  "commands.fpsm.shop.modify.gun.success": "成功修改了%1$s商店的第%2$d个插槽，添加了'%3$s'，带有%4$d发虚拟弹药",
-  "commands.fpsm.shop.modify.gun.failed": "商店中的枪支修改失败请检查商店数据",
+  "commands.fpsm.shop.slot.modify.fail": "[FPSMatch] 无法从地图 %2$s 找到 %1$s 商店。",
+  "commands.fpsm.shop.not_available": "[FPSMatch] 地图 %1$s 不是一个支持商店的地图。",
+  "commands.fpsm.shop.slot.listener.remove.success": "[FPSMatch] 成功移除了监听模块%1$s",
+  "commands.fpsm.listener.add.success": "[FPSMatch] 成功添加了监听模块%1$s",
+  "commands.fpsm.reload.success": "[FPSMatch] 重载操作成功完成",
+  "commands.fpsm.shop.modify.gun.success": "[FPSMatch] 成功修改了%1$s商店的第%2$d个插槽，添加了'%3$s'，带有%4$d发虚拟弹药",
   "item.fpsmatch.smoke_shell": "烟雾弹",
   "fpsm.shop.title.equipment": "装备",
   "fpsm.shop.title.pistol": "手枪",
   "fpsm.shop.title.mid_rank": "中级",
   "fpsm.shop.title.rifle": "步枪",
   "fpsm.shop.title.throwable": "投掷物",
+  "item.fpsmatch.bomb_disposal_kit": "拆弹工具",
   "fpsm.item.bomb_disposal_kit.drop.message": "你不能丢弃这个物品",
   "item.fpsmatch.flash_bomb": "闪光弹",
   "item.fpsmatch.grenade": "手榴弹",
@@ -76,10 +75,8 @@
   "key.fpsm.hud.custom.desc": "自定义游戏UI",
   "key.fpsm.hud.custom.on": "自定义游戏UI 开启",
   "key.fpsm.hud.custom.off": "自定义游戏UI 关闭",
-  "commands.fpsm.mvp.success": "成功添加 %2$s Mvp 音乐给 %1$s 位玩家",
-  "commands.fpsm.shop.modify.cost.success": "成功将%1$s商店槽位%2$s的价格修改为%3$s",
-  "commands.fpsm.shop.modify.failed.noSupport": "地图不支持商店",
-  "commands.fpsm.shop.modify.item.success": "成功将%1$s商店槽位%2$s的物品修改为%3$s",
+  "commands.fpsm.shop.modify.cost.success": "[FPSMatch] 成功将%1$s商店槽位%2$s的价格修改为%3$s",
+  "commands.fpsm.shop.modify.item.success": "[FPSMatch] 成功将%1$s商店槽位%2$s的物品修改为%3$s",
   "gui.fpsm.shop_editor.title": "商店内容编辑器",
   "gui.fpsm.edit_shop_slot.title": "编辑当前槽位",
   "gui.fpsm.shop_editor.save_button": "确认并保存",
