v 1.2.4 CHANGE - 重构了FPSM命令 ADD - 添加了/fpsm help 并且能够添加额外的help了。 CHANGE - 将FPSMCore中的getMap全部包装了一层Optional。 ADD - 添加了防弹属性以及配套的测试物品，与监听模块。 CHANGE - 修改了PlayerData的info方法 CHANGE - 移动和重构了部分类与方法名

--- a/src/main/resources/assets/fpsmatch/lang/zh_cn.json
+++ b/src/main/resources/assets/fpsmatch/lang/zh_cn.json
@@ -39,8 +39,6 @@
   "commands.fpsm.modify.kits.clear.failed": "[FPSMatch] 清除队伍 '%1$s' 的起始装备失败",
   "commands.fpsm.modify.kits.invalidAction": "[FPSMatch] 无效的操作",
   "commands.fpsm.modify.kits.list.success": "[FPSMatch] 队伍 '%1$s' 的起始装备列表：%2$d 件",
-  "commands.fpsm.modify.match_end_teleport_point.success": "[FPSMatch] 成功设置了游戏结束传送点 '%1$s'",
-  "commands.fpsm.match_end_teleport_point.not_available": "[FPSMatch] 地图 %1$s 不支持设置游戏结束传送点。",
   "key.fpsm.custom.tab.on": "自定义Tab 开启",
   "key.fpsm.custom.tab.off": "自定义Tab 关闭",
   "key.fpsm.custom.tab.desc": "切换自定义Tab",
@@ -53,18 +51,20 @@
   "commands.fpsm.listener.add.success": "[FPSMatch] 成功添加了监听模块%1$s",
   "commands.fpsm.reload.success": "[FPSMatch] 重载操作成功完成",
   "commands.fpsm.shop.modify.gun.success": "[FPSMatch] 成功修改了%1$s商店的第%2$d个插槽，添加了'%3$s'，带有%4$d发虚拟弹药",
-  "item.fpsmatch.smoke_shell": "烟雾弹",
   "fpsm.shop.title.equipment": "装备",
   "fpsm.shop.title.pistol": "手枪",
   "fpsm.shop.title.mid_rank": "中级",
   "fpsm.shop.title.rifle": "步枪",
   "fpsm.shop.title.throwable": "投掷物",
-  "item.fpsmatch.bomb_disposal_kit": "拆弹工具",
   "fpsm.item.bomb_disposal_kit.drop.message": "你不能丢弃这个物品",
+  "item.fpsmatch.smoke_shell": "烟雾弹",
+  "item.fpsmatch.bomb_disposal_kit": "拆弹工具",
   "item.fpsmatch.flash_bomb": "闪光弹",
   "item.fpsmatch.grenade": "手榴弹",
   "item.fpsmatch.ct_incendiary_grenade": "燃烧弹",
   "item.fpsmatch.t_incendiary_grenade": "燃烧弹",
+  "item.fpsmatch.bulletproof_armor": "测试物品 - 防弹护甲",
+  "item.fpsmatch.bulletproof_with_helmet": "测试物品 - 防弹护甲与头盔",
   "fpsmatch.tab.header.player": "玩家",
   "fpsmatch.tab.header.kills": "击杀",
   "fpsmatch.tab.header.deaths": "死亡",
@@ -75,6 +75,7 @@
   "key.fpsm.hud.custom.desc": "自定义游戏UI",
   "key.fpsm.hud.custom.on": "自定义游戏UI 开启",
   "key.fpsm.hud.custom.off": "自定义游戏UI 关闭",
+  "commands.fpsm.mvp.success": "success add %2$s mvp music to %1$s players",
   "commands.fpsm.shop.modify.cost.success": "[FPSMatch] 成功将%1$s商店槽位%2$s的价格修改为%3$s",
   "commands.fpsm.shop.modify.item.success": "[FPSMatch] 成功将%1$s商店槽位%2$s的物品修改为%3$s",
   "gui.fpsm.shop_editor.title": "商店内容编辑器",
@@ -105,5 +106,14 @@
   "tooltip.fpsm.open_editor": "[右键] 打开商店编辑器",
   "message.fpsmatch.error.no_spawn_points": "没有队伍出生点来开始游戏",
   "message.fpsmatch.error.not_enough_spawn_points": "没有足够的队伍出生点来开始游戏",
-  "key.fpsm.switch_previous_item.desc": "切换上一快捷栏"
+  "key.fpsm.switch_previous_item.desc": "切换上一快捷栏",
+  "commands.fpsm.metp.not_available": "[FPSMatch] 地图 %1$s 不支持设置游戏结束传送点。",
+  "commands.fpsm.modify.metp.success": "[FPSMatch] 成功设置了游戏结束传送点 '%1$s'",
+  "commands.fpsm.help.header": "§6===== FPSM 命令帮助 =====\n",
+  "commands.fpsm.help.basic": "§a/fpsm help §7- 显示此帮助信息\n§a/fpsm save §7- 保存所有数据\n§a/fpsm sync §7- 同步商店数据\n§a/fpsm reload §7- 重新加载配置\n",
+  "commands.fpsm.help.listener": "§a/fpsm listener_module add change_item_module <changed_cost> <default_cost> §7- 添加物品变更监听模块\n",
+  "commands.fpsm.help.shop": "§a/fpsm shop <gameType> <mapName> modify set <shopName> <shopType> <shopSlot> §7- 商店配置\n   §b• listener_module add/remove <module> §7- 添加/移除监听模块\n   §b• group_id <id> §7- 设置组ID\n   §b• cost <amount> §7- 设置价格\n   §b• item §7- 设置物品(手持物品)\n   §b• dummy_ammo_amount <amount> §7- 设置虚拟弹药数量\n",
+  "commands.fpsm.help.map": "§a/fpsm map create <gameType> <mapName> <from> <to> §7- 创建地图\n§a/fpsm map modify <gameType> <mapName> §7- 地图配置\n   §b• match_end_teleport_point <point> §7- 设置比赛结束传送点\n   §b• bomb_area add <from> <to> §7- 添加炸弹区域\n   §b• debug <start|reset|newRound|cleanup|switch> §7- 调试命令\n   §b• team join/leave [targets] §7- 加入/离开队伍\n   §b• team teams spectator players <targets> <action> §7- 观察者操作\n   §b• team teams <teamName> kits <action> §7- 队伍装备配置\n   §b• team teams <teamName> spawnpoints <action> §7- 重生点配置\n   §b• team teams <teamName> players <targets> <action> §7- 队伍玩家操作\n",
+  "commands.fpsm.help.footer": "§e使用 §6TAB键 §e自动补全命令参数"
+
 }
