--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -39,8 +39,8 @@
   "commands.fpsm.modify.kits.clear.failed": "Failed to clear start kits for team '%1$s'.",
   "commands.fpsm.modify.kits.invalidAction": "Invalid action.",
   "commands.fpsm.modify.kits.list.success": "Start kits list for team '%1$s': %2$d items.",
-  "commands.fpsm.modify.match_end_teleport_point.success" : "[FPSMatch] Successfully set the end of the game teleport point '%1$s'",
-  "commands.fpsm.match_end_teleport_point.not_available" : "[FPSMatch] Map %1$s is not an available match end teleport to point map.",
+  "commands.fpsm.modify.metp.success" : "[FPSMatch] Successfully set the end of the game teleport point '%1$s'",
+  "commands.fpsm.metp.not_available" : "[FPSMatch] Map %1$s is not an available match end teleport to point map.",
   "key.fpsm.custom.tab.on": "Custom Tab On",
   "key.fpsm.custom.tab.off": "Custom Tab Off",
   "key.fpsm.custom.tab.desc": "Switch Custom Tab",
@@ -53,18 +53,20 @@
   "commands.fpsm.listener.add.success": "[FPSMatch] Successfully added listener module %1$s.",
   "commands.fpsm.reload.success": "[FPSMatch] Reload operation completed successfully.",
   "commands.fpsm.shop.modify.gun.success": "[FPSMatch] Successfully modified the %1$s shop slot %2$d to include '%3$s' with %4$d dummy ammo.",
-  "item.fpsmatch.smoke_shell" : "Smoke Shell",
   "fpsm.shop.title.equipment" : "Equipment",
   "fpsm.shop.title.pistol" : "Pistol",
   "fpsm.shop.title.mid_rank" : "Mid Rank",
   "fpsm.shop.title.rifle" : "Rifle",
   "fpsm.shop.title.throwable": "Throwable",
-  "item.fpsmatch.bomb_disposal_kit" : "Bomb Disposal Kit",
   "fpsm.item.bomb_disposal_kit.drop.message" : "you can't drop this item",
+  "item.fpsmatch.smoke_shell" : "Smoke Shell",
+  "item.fpsmatch.bomb_disposal_kit" : "Bomb Disposal Kit",
   "item.fpsmatch.flash_bomb" : "Flash Bomb",
   "item.fpsmatch.grenade" : "Grenade",
   "item.fpsmatch.ct_incendiary_grenade" : "Incendiary Grenade",
   "item.fpsmatch.t_incendiary_grenade" : "Incendiary Grenade",
+  "item.fpsmatch.bulletproof_armor" : "TestItem - Bulletproof Armor",
+  "item.fpsmatch.bulletproof_with_helmet" : "TestItem - Bulletproof Armor with Helmet",
   "fpsmatch.tab.header.player": "Player",
   "fpsmatch.tab.header.kills": "Kills",
   "fpsmatch.tab.header.deaths": "Deaths",
@@ -106,5 +108,12 @@
   "tooltip.fpsm.open_editor": "[Right Click] Open Shop Editor",
   "message.fpsmatch.error.no_spawn_points": "There is no spawn-points for the game to start",
   "message.fpsmatch.error.not_enough_spawn_points": "There are not enough spawn-points for the game to start",
-  "key.fpsm.switch_previous_item.desc": "switch previous"
+  "key.fpsm.switch_previous_item.desc": "switch previous",
+
+  "commands.fpsm.help.header": "§6===== FPSM Command Help =====\n",
+  "commands.fpsm.help.basic": "§a/fpsm help §7- Show this help message\n§a/fpsm save §7- Save all data\n§a/fpsm sync §7- Sync shop data\n§a/fpsm reload §7- Reload configuration\n",
+  "commands.fpsm.help.listener": "§a/fpsm listener_module add change_item_module <changed_cost> <default_cost> §7- Add item change listener module\n",
+  "commands.fpsm.help.shop": "§a/fpsm shop <gameType> <mapName> modify set <shopName> <shopType> <shopSlot> §7- Shop configuration\n   §b• listener_module add/remove <module> §7- Add/remove listener module\n   §b• group_id <id> §7- Set group ID\n   §b• cost <amount> §7- Set price\n   §b• item §7- Set item (held item)\n   §b• dummy_ammo_amount <amount> §7- Set dummy ammo amount\n",
+  "commands.fpsm.help.map": "§a/fpsm map create <gameType> <mapName> <from> <to> §7- Create map\n§a/fpsm map modify <gameType> <mapName> §7- Map configuration\n   §b• match_end_teleport_point <point> §7- Set match end teleport point\n   §b• bomb_area add <from> <to> §7- Add bomb area\n   §b• debug <start|reset|newRound|cleanup|switch> §7- Debug commands\n   §b• team join/leave [targets] §7- Join/leave team\n   §b• team teams spectator players <targets> <action> §7- Spectator operations\n   §b• team teams <teamName> kits <action> §7- Team kit configuration\n   §b• team teams <teamName> spawnpoints <action> §7- Spawnpoint configuration\n   §b• team teams <teamName> players <targets> <action> §7- Team player operations\n",
+  "commands.fpsm.help.footer": "§eUse §6TAB key §efor auto-completion"
 }
