v 1.3.0 Part 2 CHANGE - FPSMCommand 结构更改 ADD - Team Capability支持指令自动注册 ADD - 支持 ClothConfig CHANGE - 解耦TeamCapability 额外拓展MapCapability ADD - 新增MapCapability ADD - FPSMCapabilityManager 新增额外工具方法 NEED TODO : 1、将数据持久化逻辑接入FPSMCapability-Savable接口 2、将BaseMap的MapCapability相关配套逻辑实现，并实现数据持久化、网络同步等功能。 3、将core/map中的接口实现为Capability。

--- a/src/main/resources/assets/fpsmatch/lang/en_us.json
+++ b/src/main/resources/assets/fpsmatch/lang/en_us.json
@@ -31,6 +31,7 @@
   "key.fpsm.open.shop.failed.left.purchase_area": "Cannot open the store because left purchase area",
   "key.fpsm.open.shop.failed.game_type.no_shop": "Cannot open the store because joined game does not support store",
   "key.fpsm.dismantle_bomb.desc": "Dismantle bomb",
+  "commands.fpsm.team.capability.invalid" : "Invalid team capability : %d",
   "commands.fpsm.team.leave.failure": "team not found",
   "commands.fpsm.shop.modify.success": "Successfully modified the shop slot type %2$d index %3$d for '%1$s' shop with item '%4$s' at a cost of %5$d.",
   "commands.fpsm.shop.modify.failed": "Failed to modify the shop. Please check your permissions or if the shop exists.",
@@ -117,5 +118,40 @@
   "commands.fpsm.help.map": "§a/fpsm map create <gameType> <mapName> <from> <to> §7- Create map\n§a/fpsm map modify <gameType> <mapName> §7- Map configuration\n   §b• match_end_teleport_point <point> §7- Set match end teleport point\n   §b• bomb_area add <from> <to> §7- Add bomb area\n   §b• debug <start|reset|newRound|cleanup|switch> §7- Debug commands\n   §b• team join/leave [targets] §7- Join/leave team\n   §b• team teams spectator players <targets> <action> §7- Spectator operations\n   §b• team teams <teamName> kits <action> §7- Team kit configuration\n   §b• team teams <teamName> spawnpoints <action> §7- Spawnpoint configuration\n   §b• team teams <teamName> players <targets> <action> §7- Team player operations\n",
   "commands.fpsm.help.footer": "§eUse §6TAB key §efor auto-completion",
   "commands.fpsm.debug.success": "FPSMatch Debug Mode : %1$s",
-  "fpsm.unknown_weapon": "Unknown Weapon"
+  "fpsm.unknown_weapon": "Unknown Weapon",
+
+  "config.fpsmatch.client": "Client Settings",
+  "config.fpsmatch.client.no_settings": "No client-specific settings currently",
+  "config.fpsmatch.common.drops": "Weapon Pickup Settings",
+  "config.fpsmatch.common.throwable": "Throwable Settings",
+  "config.fpsmatch.common.drops.main_weapon_count": "Main Weapon Count",
+  "config.fpsmatch.common.drops.main_weapon_count.tooltip": "Number of main weapons that can be picked up during the competition",
+  "config.fpsmatch.common.drops.secondary_weapon_count": "Secondary Weapon Count",
+  "config.fpsmatch.common.drops.secondary_weapon_count.tooltip": "Number of secondary weapons that can be picked up during the competition",
+  "config.fpsmatch.common.drops.throwable_count": "Throwable Count",
+  "config.fpsmatch.common.drops.throwable_count.tooltip": "Number of throwable that can be picked up during the competition",
+  "config.fpsmatch.common.drops.third_weapon_count": "RPG Weapon Count",
+  "config.fpsmatch.common.drops.third_weapon_count.tooltip": "The number of weapons that can be picked up when the weapon type is RPG (knife) during the competition",
+  "config.fpsmatch.common.throwable.flash_bomb_radius": "Flash Bomb Radius",
+  "config.fpsmatch.common.throwable.flash_bomb_radius.tooltip": "Effective blinding radius of flash bombs",
+  "config.fpsmatch.common.throwable.grenade_radius": "Grenade Radius",
+  "config.fpsmatch.common.throwable.grenade_radius.tooltip": "Effective explosion radius of grenades",
+  "config.fpsmatch.common.throwable.grenade_fuse_time": "Grenade Fuse Time",
+  "config.fpsmatch.common.throwable.grenade_fuse_time.tooltip": "Delay before grenade detonation after being thrown (ticks). 20 ticks = 1 second",
+  "config.fpsmatch.common.throwable.grenade_damage": "Grenade Damage",
+  "config.fpsmatch.common.throwable.grenade_damage.tooltip": "Explosion damage of grenades",
+  "config.fpsmatch.common.throwable.incendiary_grenade_out_time": "Incendiary Grenade Out Time",
+  "config.fpsmatch.common.throwable.incendiary_grenade_out_time.tooltip": "Self-destruct delay of incendiary grenades after being thrown (ticks). 20 ticks = 1 second",
+  "config.fpsmatch.common.throwable.incendiary_grenade_living_time": "Incendiary Grenade Living Time",
+  "config.fpsmatch.common.throwable.incendiary_grenade_living_time.tooltip": "Survival time after activation of incendiary grenade (ticks). 20 ticks = 1 second",
+  "config.fpsmatch.common.throwable.incendiary_grenade_damage": "Incendiary Grenade Damage",
+  "config.fpsmatch.common.throwable.incendiary_grenade_damage.tooltip": "Damage value of incendiary grenades",
+  "config.fpsmatch.common.throwable.smoke_shell_living_time": "Smoke Shell Living Time",
+  "config.fpsmatch.common.throwable.smoke_shell_living_time.tooltip": "Survival time after smoke bomb activation (ticks). 20 ticks = 1 second",
+  "commands.fpsm.tacz.dummy.amount.empty_hand": "MainHand ItemStack is empty",
+  "commands.fpsm.tacz.dummy.amount.success": "Set dummy ammo amount for %s to %d",
+  "commands.fpsm.tacz.dummy.amount.invalid_gun": "Invalid gun data",
+  "commands.fpsm.tacz.dummy.amount.not_gun": "ItemStack is not a gun",
+  "commands.fpsm.capability.missing": "%d capability is not found"
+
 }
