--- a/src/main/resources/assets/fpsmatch/lang/zh_cn.json
+++ b/src/main/resources/assets/fpsmatch/lang/zh_cn.json
@@ -114,6 +114,34 @@
   "commands.fpsm.help.listener": "§a/fpsm listener_module add change_item_module <changed_cost> <default_cost> §7- 添加物品变更监听模块\n",
   "commands.fpsm.help.shop": "§a/fpsm shop <gameType> <mapName> modify set <shopName> <shopType> <shopSlot> §7- 商店配置\n   §b• listener_module add/remove <module> §7- 添加/移除监听模块\n   §b• group_id <id> §7- 设置组ID\n   §b• cost <amount> §7- 设置价格\n   §b• item §7- 设置物品(手持物品)\n   §b• dummy_ammo_amount <amount> §7- 设置虚拟弹药数量\n",
   "commands.fpsm.help.map": "§a/fpsm map create <gameType> <mapName> <from> <to> §7- 创建地图\n§a/fpsm map modify <gameType> <mapName> §7- 地图配置\n   §b• match_end_teleport_point <point> §7- 设置比赛结束传送点\n   §b• bomb_area add <from> <to> §7- 添加炸弹区域\n   §b• debug <start|reset|newRound|cleanup|switch> §7- 调试命令\n   §b• team join/leave [targets] §7- 加入/离开队伍\n   §b• team teams spectator players <targets> <action> §7- 观察者操作\n   §b• team teams <teamName> kits <action> §7- 队伍装备配置\n   §b• team teams <teamName> spawnpoints <action> §7- 重生点配置\n   §b• team teams <teamName> players <targets> <action> §7- 队伍玩家操作\n",
-  "commands.fpsm.help.footer": "§e使用 §6TAB键 §e自动补全命令参数"
+  "commands.fpsm.help.footer": "§e使用 §6TAB键 §e自动补全命令参数",
 
+  "config.fpsmatch.client": "客户端设置",
+  "config.fpsmatch.client.no_settings": "当前没有客户端特定设置",
+  "config.fpsmatch.common.drops": "武器拾取设置",
+  "config.fpsmatch.common.throwable": "投掷物设置",
+  "config.fpsmatch.common.drops.main_weapon_count": "主武器拾取数量",
+  "config.fpsmatch.common.drops.main_weapon_count.tooltip": "比赛时主武器可拾取数量",
+  "config.fpsmatch.common.drops.secondary_weapon_count": "副武器拾取数量",
+  "config.fpsmatch.common.drops.secondary_weapon_count.tooltip": "比赛时副武器可拾取数量",
+  "config.fpsmatch.common.drops.throwable_count": "投掷物拾取数量",
+  "config.fpsmatch.common.drops.throwable_count.tooltip": "比赛时投掷物可拾取数量",
+  "config.fpsmatch.common.drops.third_weapon_count": "RPG类武器拾取数量",
+  "config.fpsmatch.common.drops.third_weapon_count.tooltip": "比赛时RPG品类(刀包用)可拾取数量",
+  "config.fpsmatch.common.throwable.flash_bomb_radius": "闪光弹致盲半径",
+  "config.fpsmatch.common.throwable.flash_bomb_radius.tooltip": "闪光弹致盲生效半径",
+  "config.fpsmatch.common.throwable.grenade_radius": "手雷爆炸半径",
+  "config.fpsmatch.common.throwable.grenade_radius.tooltip": "手雷爆炸生效半径",
+  "config.fpsmatch.common.throwable.grenade_fuse_time": "手雷引信时间",
+  "config.fpsmatch.common.throwable.grenade_fuse_time.tooltip": "手雷投掷后多久爆炸 (tick)。20 tick = 1秒",
+  "config.fpsmatch.common.throwable.grenade_damage": "手雷伤害",
+  "config.fpsmatch.common.throwable.grenade_damage.tooltip": "手雷的爆炸伤害",
+  "config.fpsmatch.common.throwable.incendiary_grenade_out_time": "燃烧弹自毁时间",
+  "config.fpsmatch.common.throwable.incendiary_grenade_out_time.tooltip": "燃烧弹投掷后多久自毁 (tick)。20 tick = 1秒",
+  "config.fpsmatch.common.throwable.incendiary_grenade_living_time": "燃烧弹存活时间",
+  "config.fpsmatch.common.throwable.incendiary_grenade_living_time.tooltip": "燃烧弹激活后的存活时间 (tick)。20 tick = 1秒",
+  "config.fpsmatch.common.throwable.incendiary_grenade_damage": "燃烧弹伤害",
+  "config.fpsmatch.common.throwable.incendiary_grenade_damage.tooltip": "燃烧弹的伤害",
+  "config.fpsmatch.common.throwable.smoke_shell_living_time": "烟雾弹存活时间",
+  "config.fpsmatch.common.throwable.smoke_shell_living_time.tooltip": "烟雾弹激活后的存活时间 (tick)。20 tick = 1秒"
 }
